--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/animeapp.png"
+    />
+    <meta name="author" content="Jaggehn" />
+    <meta
+      name="description"
+      property="og:description"
+      content="Find all your favourite animes at Anime App!"
+    />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -24,10 +35,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Anime App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Find all your favourtie animes right here!</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
