Included browser icon

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       property="og:description"
       content="Find all your favourite animes at Anime App!"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/animeicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
